# oph-cli

./: AGENTS.md  Cargo.toml  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
scripts/: gen-version.js  install.ps1  install.sh
src/: index.ts  main.rs  pnpm-workspace.ts  ui.rs  utils.ts
src/commands/: dash.rs  dash.ts  mod.rs  update.rs  update.ts  upgrade.rs  upgrade.ts
src/utils/: git.rs  mod.rs  package_json.rs  process.rs  versions.rs
