[package]
name = "oph"
version = "3.0.0"
edition = "2021"
description = "A general purpose CLI by Philipp Opheys"
license = "ISC"
authors = ["Philipp Opheys"]

[[bin]]
name = "oph"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
